--- a/fullstack-auth/src/main/resources/application.yml
+++ b/fullstack-auth/src/main/resources/application.yml
@@ -27,6 +27,14 @@ spring:
       key-prefix: 'fullstack:auth:'
       use-key-prefix: true
       cache-null-values: true # 缓存空值，避免缓存穿透
+  session:
+    store-type: redis
+    redis:
+      namespace: spring:session
+      flush-mode: on_save
 
 server:
   port: 20000
+  servlet:
+    session:
+      timeout: 10m
