--- a/fullstack-auth/pom.xml
+++ b/fullstack-auth/pom.xml
@@ -35,6 +35,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
         <!--支持分组校验-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
