--- a/fullstack-product/pom.xml
+++ b/fullstack-product/pom.xml
@@ -40,6 +40,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
         <!--引入thymeleaf前端静态页面开发组件-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
