--- a/fullstack-order/src/main/resources/application.properties
+++ b/fullstack-order/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis-plus.mapper-locations=classpath:mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
 # \u914D\u7F6E\u4E2D\u5FC3\u3001\u6CE8\u518C\u4E2D\u5FC3
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-spring.cloud.nacos.config.server-addr=127.0.10.1:8848
+spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
+spring.cloud.nacos.config.server-addr=repo.emon.vip:8848
 spring.config.import[0]=nacos:fullstack-order.properties?refresh=true
 #
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
@@ -49,3 +49,9 @@ spring.rabbitmq.template.mandatory=true
 # \u5F00\u542F\u624B\u52A8ack\u6D88\u606F
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
+# seata
+seata.enabled=true
+seata.tx-service-group=order
+seata.service.vgroup-mapping.order=default
+seata.service.grouplist.default=repo.emon.vip:8091
+seata.service.disable-global-transaction=false
