--- a/fullstack-ware/src/main/resources/application.properties
+++ b/fullstack-ware/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# seata
+seata.enabled=true
+seata.tx-service-group=ware
+seata.service.vgroup-mapping.ware=default
+seata.service.grouplist.default=repo.emon.vip:8091
+seata.service.disable-global-transaction=false
