--- a/fullstack-coupon/src/main/resources/application.yml
+++ b/fullstack-coupon/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 127.0.10.1:8848
+        server-addr: repo.emon.vip:8848
         namespace: fullstack-coupon # 命名空间的ID，默认 public
         group: dev # 默认 DEFAULT_GROUP
   config:
