--- a/fullstack-search/src/main/resources/application.yml
+++ b/fullstack-search/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: repo.emon.vip:8848
       config:
-        server-addr: 127.0.10.1:8848
+        server-addr: repo.emon.vip:8848
   config:
     import:
       - nacos:fullstack-product.properties?refresh=true
