--- a/fullstack-thirdparty/src/main/resources/application.properties
+++ b/fullstack-thirdparty/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=9999
+server.port=19999
 spring.application.name=fullstack-thirdparty
 # \u6CE8\u518C\u4E2D\u5FC3
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
 # \u914D\u7F6E\u4E2D\u5FC3\uFF0Cimport[index]\u7D22\u5F15\u9AD8\u7684\u4F18\u5148\u7EA7\u9AD8\uFF01\uFF01\uFF01
-spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.server-addr=repo.emon.vip:8848
 spring.cloud.nacos.config.namespace=fullstack-thirdparty
 spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-thirdparty.yml?refresh=true&group=dev
