--- a/fullstack-auth/src/main/resources/application.properties
+++ b/fullstack-auth/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ==================================================\u57FA\u7840\u914D\u7F6E beg
-spring.application.name=fullstack-ware
-server.port=11000
-logging.level.com.coding.fullstack.ware.dao=debug
+spring.application.name=fullstack-auth
+server.port=20000
+logging.level.com.coding.fullstack.auth.dao=debug
 # jackson
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Shanghai
@@ -20,36 +20,36 @@ spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
 #
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
 spring.cloud.nacos.config.server-addr=repo.emon.vip:8848
-spring.config.import[0]=nacos:fullstack-ware.properties?refresh=true
+spring.config.import[0]=nacos:fullstack-auth.properties?refresh=true
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
 #
 # ==================================================\u6570\u636E\u6E90 beg
-spring.datasource.username=root
-spring.datasource.password=root123
-spring.datasource.url=jdbc:mysql://repo.emon.vip:3306/gulimall_wms?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-mybatis-plus.mapper-locations=classpath:mapper/**/*.xml
-mybatis-plus.global-config.db-config.id-type=auto
+#spring.datasource.username=root
+#spring.datasource.password=root123
+#spring.datasource.url=jdbc:mysql://repo.emon.vip:3306/gulimall_oms?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#mybatis-plus.mapper-locations=classpath:mapper/**/*.xml
+#mybatis-plus.global-config.db-config.id-type=auto
 # ==================================================\u6570\u636E\u6E90 end
 #
 # ==================================================redis beg
-#spring.redis.host=repo.emon.vip
-#spring.redis.port=6379
-#spring.redis.password=redis123
-#spring.redis.database=0
-#spring.redis.timeout=3000ms
-## spring-cache
-#spring.cache.type=redis
-#spring.cache.redis.time-to-live=3600000
-#spring.cache.redis.use-key-prefix=true
-#spring.cache.redis.key-prefix=fullstack:cache:
-## \u7F13\u5B58\u7A7A\u503C\uFF0C\u907F\u514D\u7F13\u5B58\u51FB\u7A7F
-#spring.cache.redis.cache-null-values=true
-## spring-session
-#spring.session.store-type=redis
-#spring.session.redis.namespace=spring:session
-#spring.session.redis.flush-mode=on_save
-#server.servlet.session.timeout=30m
+spring.redis.host=repo.emon.vip
+spring.redis.port=6379
+spring.redis.password=redis123
+spring.redis.database=0
+spring.redis.timeout=3000ms
+# spring-cache
+spring.cache.type=redis
+spring.cache.redis.time-to-live=3600000
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.key-prefix=fullstack:cache:
+# \u7F13\u5B58\u7A7A\u503C\uFF0C\u907F\u514D\u7F13\u5B58\u51FB\u7A7F
+spring.cache.redis.cache-null-values=true
+# spring-session
+spring.session.store-type=redis
+spring.session.redis.namespace=spring:session
+spring.session.redis.flush-mode=on_save
+server.servlet.session.timeout=30m
 # ==================================================redis beg
 #
 # ==================================================RabbitMQ beg
@@ -70,10 +70,10 @@ mybatis-plus.global-config.db-config.id-type=auto
 # ==================================================RabbitMQ end
 #
 # ==================================================seata beg
-seata.enabled=true
+seata.enabled=false
 # \u4E8B\u52A1\u670D\u52A1\u5206\u7EC4\uFF0C\u9ED8\u8BA4\u662F default_tx_group
-seata.tx-service-group=ware
-seata.service.vgroup-mapping.ware=default
-seata.service.grouplist.default=repo.emon.vip:8091
-seata.service.disable-global-transaction=false
+#seata.tx-service-group=auth
+#seata.service.vgroup-mapping.auth=default
+#seata.service.grouplist.default=repo.emon.vip:8091
+#seata.service.disable-global-transaction=false
 # ==================================================seata end
