--- a/fullstack-auth/src/main/resources/application.yml
+++ b/fullstack-auth/src/main/resources/application.yml
@@ -1,40 +1,40 @@
-spring:
-  application:
-    name: fullstack-auth
-  cloud:
-    nacos:
-      discovery:
-        server-addr: repo.emon.vip:8848
-      config:
-        server-addr: repo.emon.vip:8848
-  config:
-    import:
-      - nacos:fullstack-auth.properties?refresh=true
-  jackson:
-    date-format: yyyy-MM-dd HH:mm:ss
-  thymeleaf:
-    cache: false
-  redis:
-    host: repo.emon.vip
-    port: 6379
-    password: redis123
-    database: 0
-    timeout: 3000ms
-  cache:
-    type: redis
-    redis:
-      time-to-live: 3600000
-      key-prefix: 'fullstack:auth:'
-      use-key-prefix: true
-      cache-null-values: true # 缓存空值，避免缓存穿透
-  session:
-    store-type: redis
-    redis:
-      namespace: spring:session
-      flush-mode: on_save
-
-server:
-  port: 20000
-  servlet:
-    session:
-      timeout: 10m
+#spring:
+#  application:
+#    name: fullstack-auth
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: repo.emon.vip:8848
+#      config:
+#        server-addr: repo.emon.vip:8848
+#  config:
+#    import:
+#      - nacos:fullstack-auth.properties?refresh=true
+#  jackson:
+#    date-format: yyyy-MM-dd HH:mm:ss
+#  thymeleaf:
+#    cache: false
+#  redis:
+#    host: repo.emon.vip
+#    port: 6379
+#    password: redis123
+#    database: 0
+#    timeout: 3000ms
+#  cache:
+#    type: redis
+#    redis:
+#      time-to-live: 3600000
+#      key-prefix: 'fullstack:auth:'
+#      use-key-prefix: true
+#      cache-null-values: true # 缓存空值，避免缓存穿透
+#  session:
+#    store-type: redis
+#    redis:
+#      namespace: spring:session
+#      flush-mode: on_save
+#
+#server:
+#  port: 20000
+#  servlet:
+#    session:
+#      timeout: 10m
