--- a/fullstack-gateway/src/main/resources/application.properties
+++ b/fullstack-gateway/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+seata.enabled=false
 # \u914D\u7F6E\u4E2D\u5FC3\uFF0Cimport[index]\u7D22\u5F15\u9AD8\u7684\u4F18\u5148\u7EA7\u9AD8\uFF01\uFF01\uFF01
 spring.cloud.nacos.config.server-addr=repo.emon.vip:8848
 spring.cloud.nacos.config.namespace=fullstack-gateway
