--- a/fullstack-order/src/main/resources/application.properties
+++ b/fullstack-order/src/main/resources/application.properties
@@ -70,7 +70,7 @@ spring.rabbitmq.listener.direct.acknowledge-mode=manual
 # ==================================================RabbitMQ end
 #
 # ==================================================seata beg
-seata.enabled=true
+seata.enabled=false
 # \u4E8B\u52A1\u670D\u52A1\u5206\u7EC4\uFF0C\u9ED8\u8BA4\u662F default_tx_group
 seata.tx-service-group=order
 seata.service.vgroup-mapping.order=default
