--- a/fullstack-ware/src/main/resources/application.properties
+++ b/fullstack-ware/src/main/resources/application.properties
@@ -53,24 +53,24 @@ mybatis-plus.global-config.db-config.id-type=auto
 # ==================================================redis beg
 #
 # ==================================================RabbitMQ beg
-#spring.rabbitmq.host=repo.emon.vip
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.virtual-host=/
-#spring.rabbitmq.username=rabbit
-#spring.rabbitmq.password=rabbit123
-## \u5F00\u542F\u53D1\u9001\u7AEF\u6D88\u606F\u62B5\u8FBE\u4EA4\u6362\u5668\u7684\u786E\u8BA4
-#spring.rabbitmq.publisher-confirm-type=correlated
-## \u5F00\u542F\u53D1\u9001\u7AEF\u6D88\u606F\u62B5\u8FBE\u961F\u5217\u7684\u786E\u8BA4
-#spring.rabbitmq.publisher-returns=true
-## \u53EA\u8981\u62B5\u8FBE\u961F\u5217\uFF0C\u4EE5\u5F02\u6B65\u53D1\u9001\u4F18\u5148\u56DE\u8C03\u6211\u4EEC\u8FD9\u4E2AreturnConfirm==>\u5F00\u542F\u5F3A\u5236\u6D88\u606F\u6295\u9012\uFF08mandatory\u4E3A\u8BBE\u7F6E\u4E3Atrue\uFF09\uFF0C\u4F46\u6D88\u606F\u672A\u88AB\u8DEF\u7531\u81F3\u4EFB\u4F55\u4E00\u4E2Aqueue\uFF0C\u5219\u56DE\u9000\u4E00\u6761\u6D88\u606F\u5230RabbitTemplate.ReturnCallback\u4E2D\u7684returnedMessage\u65B9\u6CD5\uFF1A
-#spring.rabbitmq.template.mandatory=true
-## \u5F00\u542F\u624B\u52A8ack\u6D88\u606F
-#spring.rabbitmq.listener.simple.acknowledge-mode=manual
-#spring.rabbitmq.listener.direct.acknowledge-mode=manual
+spring.rabbitmq.host=repo.emon.vip
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.username=rabbit
+spring.rabbitmq.password=rabbit123
+# \u5F00\u542F\u53D1\u9001\u7AEF\u6D88\u606F\u62B5\u8FBE\u4EA4\u6362\u5668\u7684\u786E\u8BA4
+spring.rabbitmq.publisher-confirm-type=correlated
+# \u5F00\u542F\u53D1\u9001\u7AEF\u6D88\u606F\u62B5\u8FBE\u961F\u5217\u7684\u786E\u8BA4
+spring.rabbitmq.publisher-returns=true
+# \u53EA\u8981\u62B5\u8FBE\u961F\u5217\uFF0C\u4EE5\u5F02\u6B65\u53D1\u9001\u4F18\u5148\u56DE\u8C03\u6211\u4EEC\u8FD9\u4E2AreturnConfirm==>\u5F00\u542F\u5F3A\u5236\u6D88\u606F\u6295\u9012\uFF08mandatory\u4E3A\u8BBE\u7F6E\u4E3Atrue\uFF09\uFF0C\u4F46\u6D88\u606F\u672A\u88AB\u8DEF\u7531\u81F3\u4EFB\u4F55\u4E00\u4E2Aqueue\uFF0C\u5219\u56DE\u9000\u4E00\u6761\u6D88\u606F\u5230RabbitTemplate.ReturnCallback\u4E2D\u7684returnedMessage\u65B9\u6CD5\uFF1A
+spring.rabbitmq.template.mandatory=true
+# \u5F00\u542F\u624B\u52A8ack\u6D88\u606F
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+spring.rabbitmq.listener.direct.acknowledge-mode=manual
 # ==================================================RabbitMQ end
 #
 # ==================================================seata beg
-seata.enabled=true
+seata.enabled=false
 # \u4E8B\u52A1\u670D\u52A1\u5206\u7EC4\uFF0C\u9ED8\u8BA4\u662F default_tx_group
 seata.tx-service-group=ware
 seata.service.vgroup-mapping.ware=default
