--- a/fullstack-gateway/src/main/resources/application.properties
+++ b/fullstack-gateway/src/main/resources/application.properties
@@ -48,3 +48,5 @@ spring.cloud.gateway.routes[10].predicates[0]=Host=cart.fsmall.com
 spring.cloud.gateway.routes[11].id=fullstack-host-order
 spring.cloud.gateway.routes[11].uri=lb://fullstack-order
 spring.cloud.gateway.routes[11].predicates[0]=Host=order.fsmall.com
+spring.cloud.gateway.routes[12].uri=lb://fullstack-member
+spring.cloud.gateway.routes[12].predicates[0]=Host=member.fsmall.com
