--- a/fullstack-member/src/main/resources/application.properties
+++ b/fullstack-member/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.com.coding.fullstack.member.dao=debug
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Shanghai
 # thymeleaf
-#spring.thymeleaf.cache=false
+spring.thymeleaf.cache=false
 # \u7EBF\u7A0B\u6C60
 #thread.pool.core-size=10
 #thread.pool.max-size=200
@@ -33,11 +33,11 @@ mybatis-plus.global-config.db-config.id-type=auto
 # ==================================================\u6570\u636E\u6E90 end
 #
 # ==================================================redis beg
-#spring.redis.host=repo.emon.vip
-#spring.redis.port=6379
-#spring.redis.password=redis123
-#spring.redis.database=0
-#spring.redis.timeout=3000ms
+spring.redis.host=repo.emon.vip
+spring.redis.port=6379
+spring.redis.password=redis123
+spring.redis.database=0
+spring.redis.timeout=3000ms
 # spring-cache
 #spring.cache.type=redis
 #spring.cache.redis.time-to-live=3600000
@@ -46,10 +46,10 @@ mybatis-plus.global-config.db-config.id-type=auto
 # \u7F13\u5B58\u7A7A\u503C\uFF0C\u907F\u514D\u7F13\u5B58\u51FB\u7A7F
 #spring.cache.redis.cache-null-values=true
 # spring-session
-#spring.session.store-type=redis
-#spring.session.redis.namespace=spring:session
-#spring.session.redis.flush-mode=on_save
-#server.servlet.session.timeout=30m
+spring.session.store-type=redis
+spring.session.redis.namespace=spring:session
+spring.session.redis.flush-mode=on_save
+server.servlet.session.timeout=30m
 # ==================================================redis beg
 #
 # ==================================================RabbitMQ beg
