--- a/fullstack-gateway/src/main/resources/application.properties
+++ b/fullstack-gateway/src/main/resources/application.properties
@@ -50,3 +50,5 @@ spring.cloud.gateway.routes[11].uri=lb://fullstack-order
 spring.cloud.gateway.routes[11].predicates[0]=Host=order.fsmall.com
 spring.cloud.gateway.routes[12].uri=lb://fullstack-member
 spring.cloud.gateway.routes[12].predicates[0]=Host=member.fsmall.com
+spring.cloud.gateway.routes[13].uri=lb://fullstack-seckill
+spring.cloud.gateway.routes[13].predicates[0]=Host=seckill.fsmall.com
