--- a/fullstack-order/src/main/resources/application.properties
+++ b/fullstack-order/src/main/resources/application.properties
@@ -5,10 +5,10 @@ logging.level.com.coding.fullstack.order.dao=debug
 # jackson
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Shanghai
+# SpringMvn\u81EA\u52A8\u88C5\u914D\u65F6\u7684\u65E5\u671F\u683C\u5F0F\u5316\u6A21\u5F0F\uFF0Cformdata
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 # thymeleaf
 spring.thymeleaf.cache=false
-# SpringMvn\u81EA\u52A8\u88C5\u914D\u65F6\u7684\u65E5\u671F\u683C\u5F0F\u5316\u6A21\u5F0F
-spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 # \u7EBF\u7A0B\u6C60
 thread.pool.core-size=10
 thread.pool.max-size=200
