--- a/fullstack-gateway/src/main/resources/application.properties
+++ b/fullstack-gateway/src/main/resources/application.properties
@@ -48,7 +48,20 @@ spring.cloud.gateway.routes[10].predicates[0]=Host=cart.fsmall.com
 spring.cloud.gateway.routes[11].id=fullstack-host-order
 spring.cloud.gateway.routes[11].uri=lb://fullstack-order
 spring.cloud.gateway.routes[11].predicates[0]=Host=order.fsmall.com
+spring.cloud.gateway.routes[12].id=fullstack-host-member
 spring.cloud.gateway.routes[12].uri=lb://fullstack-member
 spring.cloud.gateway.routes[12].predicates[0]=Host=member.fsmall.com
+spring.cloud.gateway.routes[13].id=fullstack-host-seckill
 spring.cloud.gateway.routes[13].uri=lb://fullstack-seckill
 spring.cloud.gateway.routes[13].predicates[0]=Host=seckill.fsmall.com
+# ==================================================sentinel beg
+spring.cloud.sentinel.transport.dashboard=localhost:8080
+spring.cloud.sentinel.transport.port=8719
+feign.sentinel.enabled=true
+# ==================================================sentinel end
+# ==================================================zipkin beg
+spring.zipkin.base-url=http://repo.emon.vip:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+# ==================================================zipkin end
