--- a/fullstack-seckill/src/main/resources/application.properties
+++ b/fullstack-seckill/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.application.name=fullstack-seckill
 server.port=13000
 logging.level.com.coding.fullstack.seckill.dao=debug
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
 # jackson
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Shanghai
@@ -76,3 +78,14 @@ seata.tx-service-group=seckill
 seata.service.vgroup-mapping.seckill=default
 seata.service.grouplist.default=repo.emon.vip:8091
 # ==================================================seata end
+# ==================================================sentinel beg
+spring.cloud.sentinel.transport.dashboard=localhost:8080
+spring.cloud.sentinel.transport.port=8719
+feign.sentinel.enabled=true
+# ==================================================sentinel end
+# ==================================================zipkin beg
+spring.zipkin.base-url=http://repo.emon.vip:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+# ==================================================zipkin end
