--- a/fullstack-thirdparty/src/main/resources/application.properties
+++ b/fullstack-thirdparty/src/main/resources/application.properties
@@ -19,3 +19,14 @@ alibaba.cloud.path=/sms/smsSend
 alibaba.cloud.sms-sign-id=2e65b1bb3d054466b82f0c9d125465e2
 alibaba.cloud.template-id=908e94ccf08b4476ba6c876d13f084ad
 alibaba.cloud.appcode=e9966259394547938f494a414ad77aa2
+# ==================================================sentinel beg
+spring.cloud.sentinel.transport.dashboard=localhost:8080
+spring.cloud.sentinel.transport.port=8719
+feign.sentinel.enabled=true
+# ==================================================sentinel end
+# ==================================================zipkin beg
+spring.zipkin.base-url=http://repo.emon.vip:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+# ==================================================zipkin end
