--- a/fullstack-coupon/src/main/resources/application.properties
+++ b/fullstack-coupon/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 # \u8FD9\u91CC\u7684\u914D\u7F6E\uFF0C\u4F1A\u4F18\u5148\u4E8E\u914D\u7F6E\u4E2D\u5FC3\u7684\u914D\u7F6E
 #coupon.user.age=10
+# ==================================================sentinel beg
+spring.cloud.sentinel.transport.dashboard=localhost:8080
+spring.cloud.sentinel.transport.port=8719
+feign.sentinel.enabled=true
+# ==================================================sentinel end
+# ==================================================zipkin beg
+spring.zipkin.base-url=http://repo.emon.vip:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+# ==================================================zipkin end
