--- a/fullstack-search/src/main/resources/application.properties
+++ b/fullstack-search/src/main/resources/application.properties
@@ -76,3 +76,14 @@ seata.enabled=false
 #seata.service.vgroup-mapping.search=default
 #seata.service.grouplist.default=repo.emon.vip:8091
 # ==================================================seata end
+# ==================================================sentinel beg
+spring.cloud.sentinel.transport.dashboard=localhost:8080
+spring.cloud.sentinel.transport.port=8719
+feign.sentinel.enabled=true
+# ==================================================sentinel end
+# ==================================================zipkin beg
+spring.zipkin.base-url=http://repo.emon.vip:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+# ==================================================zipkin end
