--- a/fullstack-member/src/main/resources/application.properties
+++ b/fullstack-member/src/main/resources/application.properties
@@ -77,8 +77,18 @@ seata.enabled=false
 #seata.service.grouplist.default=repo.emon.vip:8091
 # ==================================================seata end
 # ==================================================sentinel beg
-spring.cloud.sentinel.transport.dashboard=localhost:8080
-spring.cloud.sentinel.transport.port=8719
+# \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
+spring.cloud.sentinel.filter.enabled=true
+spring.cloud.sentinel.transport.dashboard=repo.emon.vip:8791
+spring.cloud.sentinel.datasource.flow.nacos.rule-type=flow
+spring.cloud.sentinel.datasource.flow.nacos.server-addr=${spring.cloud.nacos.config.server-addr}
+spring.cloud.sentinel.datasource.flow.nacos.group-id=SENTINEL_GROUP
+spring.cloud.sentinel.datasource.flow.nacos.data-id=${spring.application.name}-flow-rules
+spring.cloud.sentinel.datasource.degrade.nacos.rule-type=degrade
+spring.cloud.sentinel.datasource.degrade.nacos.server-addr=${spring.cloud.nacos.config.server-addr}
+spring.cloud.sentinel.datasource.degrade.nacos.group-id=SENTINEL_GROUP
+spring.cloud.sentinel.datasource.degrade.nacos.data-id=${spring.application.name}-degrade-rules
+# \u662F\u5426\u542F\u7528sentinel\u5BF9feign\u7684\u652F\u6301
 feign.sentinel.enabled=true
 # ==================================================sentinel end
 # ==================================================zipkin beg
