--- a/fullstack-common/pom.xml
+++ b/fullstack-common/pom.xml
@@ -92,11 +92,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-zipkin</artifactId>
-            <version>2.2.8.RELEASE</version>
-        </dependency>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>-->
 
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
