--- a/fullstack-thirdparty/src/main/resources/application.properties
+++ b/fullstack-thirdparty/src/main/resources/application.properties
@@ -35,12 +35,12 @@ spring.cloud.sentinel.datasource.degrade.nacos.data-id=${spring.application.name
 feign.sentinel.enabled=true
 # ==================================================sentinel end
 # ==================================================zipkin beg
-# zipkin\u670D\u52A1\u5668\u7684\u5730\u5740
-spring.zipkin.base-url=http://repo.emon.vip:9411
-# \u5173\u95ED\u670D\u52A1\u53D1\u73B0\uFF0C\u5426\u5219Spring Cloud\u4F1A\u628Azipkin\u7684url\u5F53\u505A\u670D\u52A1\u540D\u79F0
-spring.zipkin.discovery-client-enabled=false
-# \u8BBE\u7F6E\u4F7F\u7528http\u7684\u65B9\u5F0F\u4F20\u8F93\u6570\u636E
-spring.zipkin.sender.type=web
-# \u8BBE\u7F6E\u62BD\u6837\u91C7\u96C6\u7387\u4E3A100%\uFF0C\u9ED8\u8BA4\u4E3A0.1\uFF0C\u537310%
-spring.sleuth.sampler.probability=1
+## zipkin\u670D\u52A1\u5668\u7684\u5730\u5740
+#spring.zipkin.base-url=http://repo.emon.vip:9411
+## \u5173\u95ED\u670D\u52A1\u53D1\u73B0\uFF0C\u5426\u5219Spring Cloud\u4F1A\u628Azipkin\u7684url\u5F53\u505A\u670D\u52A1\u540D\u79F0
+#spring.zipkin.discovery-client-enabled=false
+## \u8BBE\u7F6E\u4F7F\u7528http\u7684\u65B9\u5F0F\u4F20\u8F93\u6570\u636E
+#spring.zipkin.sender.type=web
+## \u8BBE\u7F6E\u62BD\u6837\u91C7\u96C6\u7387\u4E3A100%\uFF0C\u9ED8\u8BA4\u4E3A0.1\uFF0C\u537310%
+#spring.sleuth.sampler.probability=1
 # ==================================================zipkin end
