--- a/fullstack-coupon/k8s/Dockerfile
+++ b/fullstack-coupon/k8s/Dockerfile
@@ -1,9 +1,8 @@
-FROM java:8
-#FROM java:8u92-jre-alpine
+FROM openjdk:8u212-jre-alpine
 MAINTAINER 问秋 liming2011071@163.com
 EXPOSE 8080
 
 VOLUME /tmp
 ADD target/*.jar  /app.jar
-RUN bash -c 'touch /app.jar'
+RUN sh -c 'touch /app.jar'
 ENTRYPOINT ["java","-jar","/app.jar", "--spring.profiles.active=prod"]
